fixed some mobile screen alignment issues

--- a/style.css
+++ b/style.css
@@ -237,6 +237,10 @@ section:last-child {
 		display: none;
 	}
 	
+	.date{
+		display:none;
+	}
+	
 	#name, #contactDetails {
 		float: none;
 		width: 100%;
